[package]
name = "mountpoint-s3"
version = "1.22.2"
edition = "2024"
license = "Apache-2.0"
publish = false
default-run = "mount-s3"

[dependencies]
mountpoint-s3-fs = { workspace = true }
mountpoint-s3-client = { workspace = true }

anyhow = { version = "1.0.102", features = ["backtrace"] }
clap = { version = "4.5.60", features = ["derive"] }
const_format = "0.2.35"
futures = "0.3.32"
nix = { version = "0.31.2", default-features = false, features = ["fs", "process", "signal", "user"] }
owo-colors = { version = "4.3.0", features = ["supports-colors"] }
regex = "1.12.3"
serde = "1.0.228"
serde_json = "1.0.149"
sysinfo = "0.38.3"
tracing = "0.1.44"

[dev-dependencies]
mountpoint-s3-client = { path = "../mountpoint-s3-client", features = ["mock"] }
mountpoint-s3-fuser = { path = "../mountpoint-s3-fuser" }
assert_cmd = "2.1.2"
assert_fs = "1.1.3"
aws-config = "1.8.14"
aws-credential-types = "1.2.13"
aws-sdk-s3 = { version = "1.124.0", default-features = false, features = ["behavior-version-latest", "sigv4a", "rt-tokio", "default-https-client"] }
futures = { version = "0.3.32", features = ["thread-pool"] }
predicates = "3.1.4"
proptest = "1.10.0"
proptest-derive = "0.8.0"
syscalls = "0.8.1"
rand = "0.10.1"
serde = { version = "1.0.228", features = ["derive"] }
test-case = "3.3.1"
tempfile = "3.26.0"
tokio = { version = "1.49.0" }
tracing = { version = "0.1.44", features = ["log"] }

[build-dependencies]
built = { version = "0.8.0", features = ["git2"] }

[features]
# Unreleased feature flags
block_size = ["mountpoint-s3-fs/block_size"]
event_log = ["mountpoint-s3-fs/event_log"]
mem_limiter = ["mountpoint-s3-fs/mem_limiter"]
# Features for choosing tests
s3_tests = ["mountpoint-s3-fs/s3_tests"]
fuse_tests = ["mountpoint-s3-fs/fuse_tests"]
s3express_tests = ["mountpoint-s3-fs/s3express_tests"]
# Other feature flags
mock = ["mountpoint-s3-client/mock", "futures/thread-pool", "tracing/log"]

[[bin]]
name = "mount-s3"
path = "src/main.rs"

[[bin]]
name = "mock-mount-s3"
path = "src/bin/mock-mount-s3.rs"
required-features = ["mock"]

[[bin]]
name = "mount-s3-log-analyzer"
path = "src/bin/mount-s3-log-analyzer.rs"

[[bin]]
name = "file-system-benchmarks"
path = "src/bin/file-system-benchmarks.rs"
