[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aws-c-s3-sys = { path = "../aws-c-s3-sys" }
aws-crt-s3 = { path = "../aws-crt-s3" }
libc = "0.2.126"
libc-stdhandle = "0.1.0"
tracing = { version = "0.1.35", default-features = false, features = ["std", "log"] }
futures = "0.3.24"
static_assertions = "1.1.0"

[dev-dependencies]
clap = "3.2.12"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }
tokio = { version = "1.21.0", features = ["rt", "macros"] }
aws-sdk-s3 = "0.18.0"
aws-config = "0.48.0"
bytes = "1.2.1"

[lib]
doctest = false

[features]
ci-tests = []
