[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-crt-s3-sys = { path = "../aws-crt-s3-sys" }
aws-crt-s3 = { path = "../aws-crt-s3" }
libc = "0.2.126"
libc-stdhandle = "0.1.0"
tracing = { version = "0.1.35", default-features = false, features = ["std", "log"] }
futures = "0.3.24"
static_assertions = "1.1.0"
thiserror = "1.0.34"
xmltree = "0.10.3"
anyhow = { version = "1.0.64", features = ["backtrace"] }

[dev-dependencies]
aws-sdk-s3 = "0.18.0"
aws-config = "0.48.0"
bytes = "1.2.1"
clap = "3.2.12"
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }
tokio = { version = "1.21.0", features = ["rt", "macros"] }
ctor = "0.1.23"

[lib]
doctest = false

[features]
s3_tests = []
