[package]
name = "s3-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
aws-crt-s3 = { path = "../aws-crt-s3" }
aws-crt-s3-sys = { path = "../aws-crt-s3-sys" }
chrono = "0.4.22"
futures = "0.3.24"
libc = "0.2.126"
libc-stdhandle = "0.1.0"
static_assertions = "1.1.0"
thiserror = "1.0.34"
tracing = { version = "0.1.35", default-features = false, features = ["std", "log"] }
urlencoding = "2.1.2"
xmltree = "0.10.3"

[dev-dependencies]
anyhow = { version = "1.0.64", features = ["backtrace"] }
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
bytes = "1.2.1"
clap = "3.2.12"
ctor = "0.1.23"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["rt", "macros"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }

[lib]
doctest = false

[features]
s3_tests = []
