[package]
name = "s3-file-connector"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
fuser = { path = "../vendor/fuser", features = ["abi-7-28"] }
s3-client = { path = "../s3-client" }
aws-crt-s3 = { path = "../aws-crt-s3" }

anyhow = { version = "1.0.64", features = ["backtrace"] }
async-trait = "0.1.57"
clap = { version = "3.2.12", features = ["derive"] }
ctrlc = "3.2.3"
futures = "0.3.24"
libc = "0.2.126"
tracing = { version = "0.1.35", default-features = false, features = ["std", "log"] }
tracing-subscriber = { version = "0.3.14", features = ["fmt", "env-filter"] }

[dev-dependencies]
aws-config = "0.48.0"
aws-sdk-s3 = "0.18.0"
base16ct = { version = "0.1.1", features = ["alloc"] }
criterion = "0.4.0"
ctor = "0.1.23"
rand = "0.8.5"
rand_chacha = "0.3.1"
sha2 = "0.10.6"
tempfile = "3.3.0"
test-case = "2.2.2"
tokio = { version = "1.21.0", features = ["rt", "macros"] }

[features]
fuse_tests = []
s3_tests = []

[[bench]]
name = "fs_bench"
harness = false
